--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,8 @@ body, html {
     font-size: 0.8em;
     font-weight: 400;
     letter-spacing: 0.05em;
+    border: 0.5px solid #D4D4D4; /* 新增邊框 */
+    border-radius: 2px; /* 圓角，可選 */
 }
 
 .menu-item:hover {
@@ -618,7 +620,7 @@ h2 {
         font-size: 0.8em; 
         padding: 5px 10px; 
         margin: 3px 0; 
-        border-radius: 15px; 
+        border-radius: 10px; 
     }
 
     .menu-content .button {
@@ -674,7 +676,7 @@ h2 {
     }
     
     .menu-item {
-        font-size: 0.9em;
+        font-size: 0.6em;
         padding: 8px;
     }
     .project-video {
