Mar bug & color

--- a/styles.css
+++ b/styles.css
@@ -191,7 +191,7 @@ body, html {
 }
 
 .project-card .button:hover {
-    background-color: #c9a273;
+    background-color: #7375c9;
 }
 
 /* Experience Section */
