--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,7 @@ body, html {
 .experience-section {
     padding: 80px 20px;
     text-align: center;
-    background: #f5f5f5; /* Light background */
+    background: #f8f5f5; /* Light background */
 }
 
 .timeline {
@@ -343,7 +343,7 @@ body, html {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .projects-section {
-    background: url('images/AI.jpg') no-repeat center center/cover;
+    background: url('images/Night.jpg') no-repeat center center/cover;
     padding: 50px 0;
     text-align: center;
     color: #fff; 
