--- a/about.css
+++ b/about.css
@@ -1,6 +1,7 @@
 /* About Section Styling */
 .about-section {
-    background-color: #000;
+    background: url('images/sky.jpg') no-repeat center center/cover;
+    background-color: #c54a4a;
     color: #D4D4D4;
     padding: 50px;
     display: flex;
@@ -26,6 +27,7 @@
     box-shadow: 0 4px 15px rgba(255, 89, 0, 0.2);
     max-width: 250px;
     width: 100%;
+    margin-top: 120px;
 }
 
 .profile-img {
@@ -35,7 +37,7 @@
 }
 
 .about-info {
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 .about-info h3 {
@@ -60,19 +62,19 @@
 }
 
 .about-text h2 {
-    color: #FFFFFF;
+    color: #cd1616;
     font-size: 2em;
     margin-bottom: 20px;
 }
 
 .about-text p {
     line-height: 1.8;
-    margin-bottom: 15px;
-    color: #e7edf0;
+    margin-bottom: 17px;
+    color: #0f1213;
 }
 
 .about-text strong {
-    color: #72c4cf; 
+    color: #cd1616; 
     font-weight: bold;
 }
 
