--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@ body, html {
     background-color: #f5f5f5; /* Light background */
     color: #333; /* Dark text for contrast */
     line-height: 1.6;
+    overflow-x: hidden; 
+    max-width: 100%; 
 }
 
 /* Menu */
@@ -54,7 +56,7 @@ body, html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: url('images/space.gif') no-repeat center center/cover;
+    background: url('images/black_moon.jpg') no-repeat center center/cover;
     text-align: center;
     position: relative;
 }
@@ -136,14 +138,14 @@ body, html {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
 .project-card {
     background: #ffffff;
-    border-radius: 12px;
-    padding: 20px;
+    border-radius: 10px;
+    padding: 10px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     border: 1px solid #e0e0e0; /* Light border */
     text-align: center;
@@ -198,7 +200,7 @@ body, html {
 .experience-section {
     padding: 80px 20px;
     text-align: center;
-    background: #f8f5f5; /* Light background */
+    background: #d0cea359; /* Light background */
 }
 
 .timeline {
@@ -343,7 +345,7 @@ body, html {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .projects-section {
-    background: url('images/Night.jpg') no-repeat center center/cover;
+    background: url('images/landscape.jpg') no-repeat center center/cover;
     padding: 50px 0;
     text-align: center;
     color: #fff; 
@@ -376,7 +378,7 @@ body, html {
 
 .project-img {
     display: block;
-    width: 100%;
+    width: 70%;
     height: auto;
     margin: 15px auto;
     border-radius: 8px;
